# OpenMesh_Algorithm

./: CMakeLists.txt  OpenMesh_Denoising.h  OpenMesh_Remeshing.cpp  OpenMesh_Remeshing.h  OpenMesh_Simplification.h  OpenMesh_Smoothing.cpp  OpenMesh_Smoothing.h  README.md  main.cpp
src/: AABB_Tree.h  BVH.cpp  BVH.h  OpenMesh_Denoising.cpp  OpenMesh_Denoising.h  OpenMesh_Remeshing.h  OpenMesh_Simplification.cpp  OpenMesh_Smoothing.h  OpenMesh_Subdivision.cpp  OpenMesh_Subdivision.h  OpenMesh_Typedef.h  TinyVector.h  TriangleKdTree.cpp  TriangleKdTree.h
